Update4 index.html

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <header id="main-header">
             <div class="header-top">
                 <!-- MELHORIA: Logo do App (substitua o src pelo caminho da sua imagem) -->
-                <img src="https://i.ibb.co/hK4mC1r/arise-logo.png" alt="Arise App Logo" class="app-logo">
-                
+<br>
+<img src="https://i.ibb.co/L5F2r8S/arise-svg-logo.png" alt="Visualização da Logo SVG">                
                 <div class="player-info">
                     <div class="player-name-rank">
                         <span id="player-name">Hunter</span>
