Update5 index.html

--- a/index.html
+++ b/index.html
@@ -15,9 +15,18 @@
 
         <header id="main-header">
             <div class="header-top">
-                <!-- MELHORIA: Logo do App (substitua o src pelo caminho da sua imagem) -->
-<br>
-<img src="https://i.ibb.co/L5F2r8S/arise-svg-logo.png" alt="Visualização da Logo SVG">                
+                <svg class="app-logo" width="150" height="60" viewBox="0 0 150 60" xmlns="http://www.w3.org/2000/svg">
+                    <defs>
+                        <linearGradient id="logoGradient" x1="0%" y1="0%" x2="100%" y2="100%">
+                            <stop offset="0%" style="stop-color:#60a5fa;stop-opacity:1" />
+                            <stop offset="100%" style="stop-color:#3b82f6;stop-opacity:1" />
+                        </linearGradient>
+                    </defs>
+                    <rect width="150" height="60" rx="8" ry="8" fill="#1e1f26" stroke="url(#logoGradient)" stroke-width="2"/>
+                    <text x="15" y="38" font-family="'Orbitron', sans-serif" font-size="28" font-weight="900" fill="url(#logoGradient)">Arise</text>
+                    <text x="115" y="38" font-family="'Courier New', monospace" font-size="24" font-weight="bold" fill="#60a5fa">_</text>
+                </svg>
+                
                 <div class="player-info">
                     <div class="player-name-rank">
                         <span id="player-name">Hunter</span>
@@ -103,6 +112,14 @@
                         <div id="shadow-army-list" class="collection-grid"></div>
                     </div>
                     <div class="card profile-section">
+                        <h3><i class="fas fa-cog"></i> Gerenciamento da Conta</h3>
+                        <p>Gerencie seu progresso e dados do jogo.</p>
+                        <div class="profile-actions">
+                            <button id="save-game-btn" class="btn-success"><i class="fas fa-save"></i> Salvar Status</button>
+                            <button id="reset-game-btn" class="btn-danger"><i class="fas fa-exclamation-triangle"></i> Resetar Jogo</button>
+                        </div>
+                    </div>
+                    <div class="card profile-section">
                         <h3><i class="fas fa-sword"></i> Equipamento</h3>
                         <p>Arma: <span id="equipped-weapon">Nenhuma</span></p>
                         <p>Habilidade: <span id="equipped-skill">Nenhuma</span></p>
@@ -134,6 +151,7 @@
     </div>
 
     <!-- Awakening Onboarding Screen -->
+    <!-- 
     <div id="awakening-overlay">
         <div class="awakening-content">
             <h1>[SISTEMA]</h1>
@@ -141,6 +159,7 @@
             <button id="awakening-continue-btn" onclick="nextAwakeningStep()">Continuar</button>
         </div>
     </div>
+    -->
 
     <!-- Epic Celebration Screen -->
     <div id="celebration-overlay">
