--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     <!-- Modal Container -->
     <div id="modal-container" class="modal-container">
         <div class="modal-content">
-            <span class="close-btn" onclick="hideModal()">&times;</span>
+           <span class="close-btn">&times;</span>
             <h2 id="modal-title"></h2>
             <p id="modal-body"></p>
             <div id="modal-workout-list" class="workout-display"></div>
